# CooperAI

./: .gitignore  LICENSE  READHIM.md  README.md  nuxt.config.ts  package-lock.json  package.json
server/: tsconfig.json
server/api/: chat.post.ts  test.get.ts
server/utils/: ai.js
src/: app.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: arch.rs  core.rs  main.rs  server.rs
src/assets/css/: main.css
src/components/: ChatView.vue  SendButton.vue  Spinner.vue  TitleBar.vue  Tools.vue
src/composables/: chat-stream.js  chat_api.ts  test_api.ts
src/layouts/: default.vue
src/middleware/: apiKey.global.ts
src/pages/: about.vue  cooper.vue  index.vue  somepage.vue
src/repositories/: chat.js
