[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "window-close", "http-all"] }
hyper = { version = "^0.14", features = ["full"] }
hyper-tls = "^0.5"
tokio = { version = "1", features = ["full"] }
serde_derive = "^1"
spinners = "^2"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
