[package]
name = "cooper"
version = "1.1.5"
description = "Virtual AI Therapist"
authors = ["Kinjalk Tripathi <kinjalkt3@gmail.com>"]
license = "Creative Commons Attribution-NonCommercial 4.0 International License"
repository = "https://github.com/kinxyo/CooperAI.git"
default-run = "cooper"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "window-close", "http-all"] }
hyper = { version = "^0.14", features = ["full"] }
hyper-tls = "^0.5"
tokio = { version = "1", features = ["full"] }
serde_derive = "^1"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
